src/App.css
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
@import './assests/style/sm-screen.css';
@import './assests/style/md-screen.css';
@import './assests/style/pc-screen.css';

* {
    margin: 0;
    padding: 0;
    scroll-behavior: smooth;
    box-sizing: border-box;
}
::-webkit-scrollbar{
    display: none;
}

:root {
    --primary: #F9C349;
    --secondary: #F9C34A;
    --midYellow: #FEB306;
    --tertiary: #7A615C;
    --white: #FFFFFF;
    --black: #1E1810;
    --blue: #0056FF;
    --lightBlue: #40ADE2;
    --telegram: #2CA5E0;
    --brown: #888783;
    --likeWhite: #F8F7F3; 
}

::selection {
    color: var(--black);
    background-color: var(--secondary);
}

.work-sans {
    font-family: 'Work Sans', sans-serif;
}

.open-sans {
    font-family: 'Open Sans', sans-serif;
}

.liList li:hover {
color: var(--secondary);
}

.hrClass {
    width: 5rem;
    margin: 1.25rem auto;
    border-color: var(--primary);
}

.shadeEffect {
    filter: brightness(103%) contrast(96%) saturate(81%) blur(0px) hue-rotate(336deg);
    border-radius: 4px 4px 4px 4px;
    box-shadow: 10px 10px 0px 1px rgba(0, 0, 0, 0.07);
}

.button {
    transition: all 0.5 ease-in-out;
}

.button:hover {
    background-color: var(--midYellow);
}

:is(.divAccess, .divAccessSpan, .divAccessBtn) {
    position: absolute;
    transform: translate(-50%);
}

.divAccess {
    top: 50%;
    left: 50%;
}

.divAccessSpan {
    top: 60%;
    left: 50%;
}

.divAccessBtn {
    bottom: 20%;
    left: 50%;
}

.targetHref a {
    display: flex;
    justify-content: center;
    margin: 0.4rem auto;
    width: 10rem;
}

.targetHref h1 {
    cursor: pointer;
}
.targetHref span {
    cursor: default;
}
.targetHref h1:hover{
    color: var(--secondary);
}

#copyright {
    display: flex;
    justify-content: center;
    margin: 2rem auto;
}

